<resources>
    // Nome do aplicativo
    <string name="app_name">OrgWork</string>

    // Login Sheet
    <string name="Text_Button_Login">Login</string>

    // Main Activity
    <string name="Text_Titulo_Main_Activity">Organize seu mundo</string>
    <string name="Text_Subtitulo_Main_Activity">OrgWork</string>
    <string name="Button_Login_Activity_Main">Login</string>
    <string name="Button_Registro_Activity_Main">Registrar</string>

    // Login Activity
    <string name="Text_Titulo_Activity_Login">Bem vindo de volta</string>
    <string name="Text_Subtitulo_Activity_Login">Faça login na sua conta</string>
    <string name="Text_Recover_Activity_Login">Esqueceu sua senha?</string>
    <string name="Text_Register_Activity_Login">Cadastre-se</string>
    <string name="Hint_Email_Activity_Login">E-mail</string>
    <string name="Hint_Password_Activity_Login">Senha</string>

    // Recovery Activity
    <string name="Text_Titulo_Activity_Recover">Bem vindo de volta!</string>
    <string name="Text_Subtitulo_Activity_Recover">Recuperar senha</string>
    <string name="Hint_Email__Activity_Recover">E-mail</string>

    // Register Activity
    <string name="Text_Titulo_Activity_Register">Bem vindo de volta</string>
    <string name="Text_Subtitulo_Activity_Register">Criar uma nova conta</string>
    <string name="Text_Login_Activity_Register">Já possuo uma conta</string>
    <string name="Hint_Email_Activity_Register">E-mail</string>
    <string name="Hint_Name_Activity_Register">Nome</string>
    <string name="Hint_Password_Activity_Register">Senha</string>

    // Home Activity
    <string name="Text_Titulo_Activity_Home">Inicio</string>

    // Agenda Activity
    <string name="Text_Titulo_Activity_Agenda">Agenda</string>

    // Profile Activity
    <string name="Text_Titulo_Activity_Perfil">Perfil</string>
    <string name="Text_Nome_Activity_Perfil">Nome</string>
    <string name="Button_Logout_Activity_Perfil">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao_blog">Descrição</string>

    <string-array name="tipo_solicitacao">
        <item>Duvida</item>
        <item>Sugestão</item>
        <item>Reportar Bug</item>
        <item>Outros</item>

    </string-array>

</resources>