<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:background="@drawable/background_login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text_Titulo_Activity_Login"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text_Subtitulo_Activity_Login"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ILemailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:errorEnabled="true"
        app:counterEnabled="false"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/edit_text"
            android:hint="@string/Hint_Email_Activity_Login"
            android:inputType="textWebEmailAddress"
            android:padding="12.5dp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ILsenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="20dp">

         <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:hint="@string/Hint_Password_Activity_Login"
            android:inputType="textPassword"
            android:padding="12.5dp" />


    </com.google.android.material.textfield.TextInputLayout>



    <include
        android:id="@+id/login"
        layout="@layout/progress_btn_layout"
        android:layout_marginBottom="20dp"
        android:onClick="login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />




    <TextView
        android:id="@+id/btnForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/Text_Recover_Activity_Login"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btnRegisterBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="register"
        android:text="@string/Text_Register_Activity_Login"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />




</LinearLayout>
