<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9EBEE">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Text_Titulo_Activity_Perfil"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:typeface="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_email_perfil"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:text="loremimpsum@lorem.com"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nome_perfil"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txt_nome_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_person_2"
        android:drawablePadding="5dp"
        android:text="@string/Text_Nome_Activity_Perfil"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <Button
        android:id="@+id/btn_Sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:drawableStart="@drawable/ic_exit"
        android:text="@string/Button_Logout_Activity_Perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>